# db-wrapper

./: .gitignore  LICENSE  pyproject.toml  requirements.txt  setup.cfg
core/: __init__.py  db.py  formats.py
docs/: conf.py  index.rst
tests/: conftest.py  test_db.py  test_queries.py
tests/tests_db_managers/: test_all.py  test_filter_date_fields.py  test_filter_general_cases.py  test_filter_integer_fields.py  test_filter_spoon_guru_cases.py  test_filter_string_fields.py
