[tool.poetry]
name = "db-wrapper"
version = "0.1.0"
description = "Query easily sql databases"
authors = ["fantaso <fantaso.code@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
